--- a/app.json
+++ b/app.json
@@ -1,27 +1,30 @@
 {
   "expo": {
-    "name": "hrm-app-diligo",
-    "slug": "hrm-app-diligo",
-    "icon": "./assets/images/logoIcon.png",
+    "name": "app",
+    "slug": "app",
     "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
-    "description": "",
-    "plugins": [
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/images/logoIcon.png",
-          "color": "red",
-          "sounds": [
-            "./assets/sounds/success.mp3",
-            "./assets/sounds/success.mp3"
-          ]
-        }
-      ]
-    ],
-    "githubUrl": "https://github.com/LukiNguyen/App-HRM-backup"
-  },
-  "name": "hrm-app-diligo"
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      }
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    }
+  }
 }
